syntax = "proto3";

package msw.server.rpc.presets;

message IdentifiablePreset {
  string id = 1;
  string props = 2;
}