syntax = "proto3";

option java_multiple_files = true;
option java_package = "msw.server.rpc.presets";
option java_outer_classname = "PresetCRUDResponseProto";

package msw.server.rpc.presets;

import "msw/server/rpc/presets/ResponseCode.proto";

message PresetCRUDResponse {
  ResponseCode code = 1;
  string message = 2;
}