syntax = "proto3";

option java_multiple_files = true;
option java_package = "msw.server.rpc.presets";
option java_outer_classname = "PresetIDProto";

package msw.server.rpc.presets;

message PresetID {
  string id = 1;
}