syntax = "proto3";

package msw.server.rpc.presets;

message PresetIDRegex {
  string regex = 1;
}