syntax = "proto3";

option java_multiple_files = true;
option java_package = "msw.server.rpc.presets";
option java_outer_classname = "PropertiesStringProto";

package msw.server.rpc.presets;

message PropertiesString {
  string props = 1;
}